--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,4 +1,6 @@
 
-<h3> Visualizations </h3>
+<!-- <h3> Visualizations </h3> -->
 
-<a ui-sref="us">Drawing the US</a>
+<!-- <a ui-sref="us">Drawing the US</a>
+<br>
+<a ui-sref="nyc">NYC Choropleth</a> -->
